--- a/programacion/esp32_espress_idf/clinostate/main/CMakeLists.txt
+++ b/programacion/esp32_espress_idf/clinostate/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
     SRCS "main.c"
-    PRIV_REQUIRES spi_flash motores 
+    PRIV_REQUIRES spi_flash motores LP8
     INCLUDE_DIRS "."
 )
