--- a/programacion/esp32_espress_idf/clinostate/CMakeLists.txt
+++ b/programacion/esp32_espress_idf/clinostate/CMakeLists.txt
@@ -1,6 +1,11 @@
-# The following lines of boilerplate have to be in your project's
-# CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.16)
 
+# Añade subcarpetas donde están los componentes personalizados
+set(EXTRA_COMPONENT_DIRS 
+    ${CMAKE_SOURCE_DIR}/components/sensores/LP8
+    #//${CMAKE_SOURCE_DIR}/components/comunicacion
+)
+
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+
 project(clinostate)
