se crearon clases

--- a/programacion/esp32_espress_idf/clinostate/.vscode/settings.json
+++ b/programacion/esp32_espress_idf/clinostate/.vscode/settings.json
@@ -10,7 +10,9 @@
         "accelstepper.h": "c",
         "gpio.h": "c",
         "cstdint": "c",
-        "cstddef": "c"
+        "cstddef": "c",
+        "esp_timer.h": "c",
+        "compare": "c"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
