--- a/programacion/esp32_espress_idf/clinostate/components/sensores/LP8/CMakeLists.txt
+++ b/programacion/esp32_espress_idf/clinostate/components/sensores/LP8/CMakeLists.txt
@@ -1,3 +1,6 @@
-idf_component_register(SRCS "src/LP8_protocolo.c" "src/LP8_libreria.c"
+idf_component_register(SRCS "src/LP8_protocolo.c" "src/LP8_libreria.cpp"
                        INCLUDE_DIRS "include"
-                       REQUIRES driver)
+                       REQUIRES driver esp_timer)
+
+                       
+set_source_files_properties(src/LP8_libreria.cpp PROPERTIES LANGUAGE CXX)
