--- a/programacion/esp32_espress_idf/clinostate/components/motores/CMakeLists.txt
+++ b/programacion/esp32_espress_idf/clinostate/components/motores/CMakeLists.txt
@@ -1,3 +1,4 @@
-idf_component_register(SRCS "motores.cpp"
-                       INCLUDE_DIRS "include"
-                       REQUIRES driver AccelStepper)
+idf_component_register(
+    SRCS "motores.c"
+    INCLUDE_DIRS "include"
+)
